docker/tomcat-deployment.yaml
#apiVersion: apps/v1
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myweb
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: myweb-container
        image: 172.16.0.193:5000/cloud/cicd:v${BUILD_NUMBER}
        ports:
        - containerPort: 8080
